first branch commit

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,7 +14,7 @@
 				</form>
 
 				<!-- For displaying raw json data -->
-				<pre>{{searchAllResults | json}}</pre>
+				<pre>{{getAllResults | json}}</pre>
 			</div>
 
 			<div class="col-sm-6">
