--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,33 +1,91 @@
-<h3>
-  Edit works!
-</h3>
-
-
-<div *ngIf="person">
-  <h3>{{editName}}</h3>
-  <div>
-    <label>Id:</label>
-    {{person.id}}
-  </div>
-  <div>
-    <label>Name:</label>
-    <input [(ngModel)]="editName" name="name" id="name" placeholder="name"/>
-  </div>
-  <div>
-    <label>Phone:</label>
-    <input [(ngModel)]="editPhone" name="phone" id="phone" placeholder="Phone"/>
-  </div>
-  <fieldset>
-    <legend>Address:</legend>
-    <address>
-      <input [(ngModel)]="editAddress.street" id="street"><br/>
-      <input [(ngModel)]="editAddress.city" id="city">,
-      <input [(ngModel)]="editAddress.state" id="state" size="2">
-      <input [(ngModel)]="editAddress.zip" id="zip" size="5">
-    </address>
-  </fieldset>
-  <button (click)="save()" id="save">Save</button>
-  <button (click)="cancel()" id="cancel">Cancel</button>
+<!-- <div class="container">
+	<h3>
+	  Editing
+	</h3>
 </div>
 
+<div class="container"> 
+	<div *ngIf="person">
+	<h3>{{editName}}</h3>
 
+	<form (ngSubmit)="save()" ngNativeValidate>
+
+    	<div class="form-group row">
+			<label for="id" class="col-sm-2 col-form-label">ID:</label>
+     		<div class="col-sm-6">
+        		<input class="form-control" id="id" value="{{person.id}}">
+      		</div>
+    	</div>
+
+    	<div class="form-group row">
+			<label for="name" class="col-sm-2 col-form-label">Name:</label>
+     		<div class="col-sm-6">
+        		<input class="form-control" [(ngModel)]="editName" name="name" id="name">
+      		</div>
+    	</div>
+
+    	<div class="form-group row">
+			<label for="phone" class="col-sm-2 col-form-label">Phone:</label>
+     		<div class="col-sm-6">
+        		<input class="form-control" [(ngModel)]="editPhone" name="phone" id="phone">
+      		</div>
+    	</div>
+
+    	<div class="form-group row">
+			<label for="address" class="col-sm-2 col-form-label">Address:</label>
+     		<div class="col-sm-6">
+        		<input class="form-control" [(ngModel)]="editAddress.street" id="address">
+      		</div>
+    	</div>
+
+    	<div class="form-row">
+    		<div class="form-group col-md-6">
+      			<label for="city" class="col-form-label">City</label>
+      			<input type="text" [(ngModel)]="editAddress.city" class="form-control">
+    		</div>
+    		<div class="form-group col-md-4">
+      			<label for="state" class="col-form-label">State</label>
+      			<input [(ngModel)]="editAddress.state" id="state" size="2">
+    		</div>
+    		<div class="form-group col-md-2">
+      			<label for="zip" class="col-form-label">Zip</label>
+      			<input [(ngModel)]="editAddress.zip" id="zip" size="5">
+    		</div>
+  		</div>
+
+		<button class="btn btn-primary" (click)="save()" id="save">Save</button>
+		<button class="btn btn-danger" (click)="cancel()" id="cancel">Cancel</button>
+	</form>
+</div>
+ -->
+
+
+
+<div class="container">
+	 <div *ngIf="person">
+	  <h3>{{editName}}</h3>
+	  <div>
+	    <label>Id:</label>
+	    {{person.id}}
+	  </div>
+	  <div>
+	    <label>Name:</label>
+		<input [(ngModel)]="editName" name="name" id="name" placeholder="name" required/>
+	  </div>
+	  <div>
+	    <label>Phone:</label>
+	    <input [(ngModel)]="editPhone" name="phone" id="phone" placeholder="Phone"/>
+	  </div>
+	  <fieldset>
+	    <legend>Address:</legend>
+	    <address>
+	      <input [(ngModel)]="editAddress.street" id="street"><br/>
+	      <input [(ngModel)]="editAddress.city" id="city">,
+	      <input [(ngModel)]="editAddress.state" id="state" size="2">
+	      <input [(ngModel)]="editAddress.zip" id="zip" size="5">
+	    </address>
+	  </fieldset>
+	  	<button class="btn btn-primary" (click)="save()" id="save">Save</button>
+		<button class="btn btn-danger" (click)="cancel()" id="cancel">Cancel</button>
+	</div>
+</div>
