--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,16 +1,18 @@
 
 
 	<div class="container">
-		
+
 		<h2>Search</h2>
 
 
 		<div class="row">
 			<div class="col-sm-6">
+
 				<form>
-					<input type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
-					<button type="button" (click)="search()">Search</button>
-					<button type="button" (click)="_getAll()">Get All!</button> <br/>
+					<input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
+					<button type="button" (click)="search()" class="btn btn-primary">Search</button>
+					<!-- <button type="button" (click)="searchie()">Searchie</button> -->
+					<button type="button" (click)="_getAll()" class="btn btn-primary">Get All!</button> <br/>
 				</form>
 
 				<!-- For displaying raw json data -->
@@ -29,7 +31,7 @@
 				  </thead>
 				  <tbody>
 				  <tr *ngFor="let person of searchResults; let i=index">
-				    <td><a [routerLink]="['/edit', person.id]">{{person.name}}</a></td>
+				   <td><a [routerLink]="['/edit', person.id]">{{person.name}}</a></td>
 				    <td>{{person.phone}}</td>
 				    <td>{{person.address.street}}<br/>
 				      {{person.address.city}}, {{person.address.state}} {{person.address.zip}}
@@ -39,7 +41,7 @@
 				</table>
 					</div>
 				</div>
-	
-		
+
+
 
 </div>
