--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,7 +9,7 @@
 			<div class="col-sm-6">
 
 				<form>
-					<input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()">
+					<input class="form-control" type="search" name="query" [(ngModel)]="query" (keyup)="search()">
 					<button type="button" (click)="search()" class="btn btn-primary">Search</button>
 					<!-- <button type="button" (click)="searchie()">Searchie</button> -->
 					<button type="button" (click)="_getAll()" class="btn btn-primary">Get All!</button> <br/>
