--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">{{title}}</a>
+</nav>
+
 <router-outlet></router-outlet>
