--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,27 +1,28 @@
-<!-- <div class="container">
-	<h3>
+<div class="container text-center">
+	<h1>
 	  Editing
-	</h3>
+	</h1>
 </div>
 
 <div class="container"> 
 	<div *ngIf="person">
 	<h3>{{editName}}</h3>
 
-	<form (ngSubmit)="save()" ngNativeValidate>
+	<form #editForm="ngForm" (ngSubmit)="save()" ngNativeValidate>
 
     	<div class="form-group row">
 			<label for="id" class="col-sm-2 col-form-label">ID:</label>
      		<div class="col-sm-6">
-        		<input class="form-control" id="id" value="{{person.id}}">
+        		<input class="form-control" name="id" id="id" value="{{person.id}}">
       		</div>
     	</div>
 
     	<div class="form-group row">
 			<label for="name" class="col-sm-2 col-form-label">Name:</label>
      		<div class="col-sm-6">
-        		<input class="form-control" [(ngModel)]="editName" name="name" id="name">
+        		<input class="form-control" [(ngModel)]="editName" name="name" id="name" required>
       		</div>
+
     	</div>
 
     	<div class="form-group row">
@@ -32,34 +33,34 @@
     	</div>
 
     	<div class="form-group row">
-			<label for="address" class="col-sm-2 col-form-label">Address:</label>
+			<label for="street" class="col-sm-2 col-form-label">Address:</label>
      		<div class="col-sm-6">
-        		<input class="form-control" [(ngModel)]="editAddress.street" id="address">
+        		<input class="form-control" [(ngModel)]="editAddress.street" name="street" id="street">
       		</div>
     	</div>
 
     	<div class="form-row">
     		<div class="form-group col-md-6">
       			<label for="city" class="col-form-label">City</label>
-      			<input type="text" [(ngModel)]="editAddress.city" class="form-control">
+      			<input type="text" [(ngModel)]="editAddress.city" name="city" id="city" class="form-control">
     		</div>
     		<div class="form-group col-md-4">
       			<label for="state" class="col-form-label">State</label>
-      			<input [(ngModel)]="editAddress.state" id="state" size="2">
+      			<input class="form-control" [(ngModel)]="editAddress.state" name="state" id="state" size="2">
     		</div>
     		<div class="form-group col-md-2">
       			<label for="zip" class="col-form-label">Zip</label>
-      			<input [(ngModel)]="editAddress.zip" id="zip" size="5">
+      			<input class="form-control" [(ngModel)]="editAddress.zip" name="zip" id="zip" size="5">
     		</div>
   		</div>
 
-		<button class="btn btn-primary" (click)="save()" id="save">Save</button>
+		<button class="btn btn-primary" (click)="save()" id="save" [disabled]="!editForm.form.valid">Save</button>
 		<button class="btn btn-danger" (click)="cancel()" id="cancel">Cancel</button>
 	</form>
 </div>
- -->
 
 
+<!-- 
 
 <div class="container">
 	 <div *ngIf="person">
@@ -80,7 +81,7 @@
 	    <legend>Address:</legend>
 	    <address>
 	      <input [(ngModel)]="editAddress.street" id="street"><br/>
-	      <input [(ngModel)]="editAddress.city" id="city">,
+	      <input [(ngModel)]="editAddress.city" id="city">
 	      <input [(ngModel)]="editAddress.state" id="state" size="2">
 	      <input [(ngModel)]="editAddress.zip" id="zip" size="5">
 	    </address>
@@ -88,4 +89,4 @@
 	  	<button class="btn btn-primary" (click)="save()" id="save">Save</button>
 		<button class="btn btn-danger" (click)="cancel()" id="cancel">Cancel</button>
 	</div>
-</div>
+</div> -->
